@startuml Domain Model - Scan

!define RECTANGLE class

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE

package "Domain Layer" {

    ' ==========================================
    ' AGGREGATE ROOT
    ' ==========================================
    class StepScan <<Aggregate Root>> {
        + id: UUID
        + status: ScanStatus
        + start_time: datetime
        + end_time: datetime
        + points: List[ScanPointResult]
        
        + start()
        + add_point_result(result: ScanPointResult)
        + complete()
        + fail(reason: str)
        + cancel()
    }

    class ScanPointResult <<Value Object>> {
        + position: Position2D
        + measurement: VoltageMeasurement
        + point_index: int
    }

    ' ==========================================
    ' FACTORY
    ' ==========================================
    class ScanTrajectoryFactory <<Factory>> {
        + {static} create_trajectory(config: StepScanConfig) -> ScanTrajectory
    }

    class ScanTrajectory <<Value Object>> {
        + points: List[Position2D]
        + total_points: int
    }

    ' ==========================================
    ' CONFIGURATION
    ' ==========================================
    class StepScanConfig <<Value Object>> {
        + scan_zone: ScanZone
        + x_nb_points: int
        + y_nb_points: int
        + scan_mode: ScanMode
        + stabilization_delay_ms: int
        + averaging_per_scan_point: int
        + measurement_uncertainty: MeasurementUncertainty
        
        + validate() -> ValidationResult
    }

    class ScanZone <<Value Object>> {
        + x_min: float
        + x_max: float
        + y_min: float
        + y_max: float
    }

    enum ScanMode <<Value Object>> {
        SERPENTINE
        RASTER
        COMB
    }

    ' ==========================================
    ' DOMAIN EVENTS
    ' ==========================================
    class DomainEvent <<Interface>> {
        + occurred_on: datetime
    }

    class ScanStarted <<Domain Event>> {
        + scan_id: UUID
        + config: StepScanConfig
    }

    class ScanPointAcquired <<Domain Event>> {
        + scan_id: UUID
        + point_index: int
        + position: Position2D
        + measurement: VoltageMeasurement
    }

    class ScanCompleted <<Domain Event>> {
        + scan_id: UUID
        + total_points: int
    }

    class ScanFailed <<Domain Event>> {
        + scan_id: UUID
        + reason: str
    }

    class ScanCancelled <<Domain Event>> {
        + scan_id: UUID
    }
}

' ==========================================
' RELATIONS
' ==========================================

StepScan "1" *-- "0..*" ScanPointResult : contains
StepScanConfig *-- ScanZone
StepScanConfig *-- ScanMode

ScanTrajectoryFactory ..> ScanTrajectory : creates
ScanTrajectoryFactory ..> StepScanConfig : uses

StepScan ..> ScanStarted : emits
StepScan ..> ScanPointAcquired : emits
StepScan ..> ScanCompleted : emits
StepScan ..> ScanFailed : emits
StepScan ..> ScanCancelled : emits

ScanStarted --|> DomainEvent
ScanPointAcquired --|> DomainEvent
ScanCompleted --|> DomainEvent
ScanFailed --|> DomainEvent
ScanCancelled --|> DomainEvent

@enduml
